# babylm

./: .gitignore  .jupyter_ystore.db  Baselines.ipynb  README.md  Untitled.ipynb  babylm_eval.py  model.py  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json  post-create-command.sh
src/data/: __init__.py
src/eval/: __init__.py
src/search/: __init__.py  params.py  trial.py
