[tool.poetry]
name = "babylm-challenge"
version = "0.1.0"
description = ""
authors = []
readme = "README.md"
packages = [
    {include = "data", from = "src"},
    # {include = "train", from = "src"},
    # {include = "inference", from = "src"},
]

[tool.poetry.dependencies]
python = ">=3.10,<4"
tqdm = "^4.65.0"
torch = "^2.0.1"
torchtext = "^0.15.2"
lightning = "^2.0.3"
transformers = "^4.30.2"
tokenizers = "^0.13.3"

[tool.poetry.group.dev.dependencies]
mypy = "^1.3.0"
bandit = "^1.7.5"
black = "^23.3.0"
jupyterlab = "^4.0.2"
types-requests = "^2.31.0.1"
jupyter = "^1.0.0"
jupyter-collaboration = "^1.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
