[tool.poetry]
name = "babylm-challenge"
version = "0.1.0"
description = ""
authors = []
readme = "README.md"
packages = [{ include = "data", from = "src" }]

[tool.poetry.dependencies]
python = "^3.9"
tqdm = "^4.65.0"
transformers = "^4.30.2"
tokenizers = "^0.13.3"
accelerate = "^0.20.3"
datasets = "^2.13.1"
nltk = "^3.8.1"
pydantic = "<2"

[tool.poetry.scripts]
search = "search:run_search"

[tool.poetry.group.dev.dependencies]
mypy = "^1.3.0"
bandit = "^1.7.5"
black = "^23.3.0"
jupyterlab = "^4.0.2"
types-requests = "^2.31.0.1"
jupyter = "^1.0.0"
jupyter-collaboration = "^1.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
